--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -17882,15 +17882,9 @@ video {
   transition-delay: 1000ms;
 }
 
-.toggle__dot {
-  top: -.25rem;
-  left: -.25rem;
-  transition: all 0.3s ease-in-out;
-}
-
-input:checked ~ .toggle__dot {
-  transform: translateX(100%);
-  background-color: #48bb78;
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 640px) {
