--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,3 +9,15 @@
   width: 100%;
   height: 100%;
 }
+
+input::placeholder {
+  font-family: 'Noto Sans KR';
+  color: black;
+}
+
+input:focus::placeholder {
+transform: scale(0.6) translate(-40%, -30%);
+transition: all .5s ease-in-out;
+color: #667eea;
+font-family: 'Noto Sans KR';
+}
