--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,3 +21,205 @@ transition: all .5s ease-in-out;
 color: #667eea;
 font-family: 'Noto Sans KR';
 }
+
+@keyframes arrow-spin {
+  100% {
+    transform: rotate(179deg);
+  }
+}
+
+@-webkit-keyframes arrow-spin {
+  100% {
+    -webkit-transform: rotate(179deg);
+  }
+}
+
+.psoload,
+.psoload *,
+.psoload *:before,
+.psoload *:after {
+  box-sizing: border-box;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+}
+
+.psoload {
+  position: relative;
+  height: 30px;
+  width: 30px;
+}
+
+.psoload .straight,
+.psoload .curve {
+  position: absolute;
+  top: 17.5%;
+  left: 17.5%;
+  width: 65%;
+  height: 65%;
+  border-radius: 100%;
+  animation: arrow-spin 0.85s cubic-bezier(0.2, 0.8, 0.9, 0.1) infinite;
+  -webkit-animation: arrow-spin 0.85s cubic-bezier(0.2, 0.8, 0.9, 0.1) infinite;
+}
+
+.psoload .straight:before,
+.psoload .straight:after {
+  content: '';
+  position: absolute;
+  width: 10%;
+  border-bottom: 3px solid #fafafa;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  z-index: 99999999999999999;
+}
+
+.psoload .straight:before {
+  top: 1px;
+  left: 1px;
+}
+
+.psoload .straight:after {
+  bottom: 1px;
+  right: 1px;
+}
+/* 
+.psoload .curve:before,
+.psoload .curve:after {
+  content: '';
+  position: absolute;
+  width: 13px;
+  height: 6px;
+  border: solid 3px transparent;
+  border-top-color: #667eea;
+  border-radius: 50%/10px 10px 0 0;
+  z-index: 90001;
+} */
+
+.psoload .curve:before {
+  transform: rotate(-63deg) translateX(-10px) translateY(-4px);
+  -webkit-transform: rotate(-63deg) translateX(-10px) translateY(-4px);
+}
+
+.psoload .curve:after {
+  bottom: 5px;
+  right: 5px;
+  transform: 1rotate(115deg) translateX(-26px) translateY(-12px);
+  -webkit-transform: rotate(115deg) translateX(-26px) translateY(-12px);
+}
+
+.psoload .center {
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  width: 60%;
+  height: 60%;
+  border-radius: 100%;
+  border: 3px solid #667eea;
+}
+
+.psoload .inner {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  width: 50%;
+  height: 50%;
+  border-radius: 100%;
+  animation: arrow-spin 0.85s cubic-bezier(0.2, 0.8, 0.9, 0.1) infinite reverse;
+  -webkit-animation: arrow-spin 0.85s cubic-bezier(0.2, 0.8, 0.9, 0.1) infinite reverse;
+}
+
+.psoload .inner:before,
+.psoload .inner:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border: 5px solid transparent;
+  border-bottom-width: 8px;
+  border-bottom-color: #667eea;
+}
+
+.psoload .inner:before {
+  top: 12px;
+  left: 12px;
+  transform: rotate(128deg);
+  -webkit-transform: rotate(128deg);
+}
+
+.psoload .inner:after {
+  bottom: 12px;
+  right: 12px;
+  transform: rotate(-48deg);
+  -webkit-transform: rotate(-48deg);
+}
+
+/* Toggle */
+.switch label {
+  float: left;
+  display: block;
+  font-size: 14px;
+  line-height: 28px;
+  color: #979696;
+  cursor: pointer;
+  transition: 0.5s color;
+}
+.switch label:first-of-type {
+  color: #222;
+}
+/* .switch.on label:first-of-type {
+  color: #fff
+} */
+.switch label:hover {
+  color: #667eea !important;
+}
+.switch.on .knob {
+  float: left;
+  width: 62px;
+  height: 28px;
+  margin: 0 10px;
+  border-radius: 14px;
+  background: #222;
+  position: relative;
+}
+.switch.on .knob:after {
+  content: "";
+  background: #fff;
+  width: 22px;
+  height: 22px;
+  border-radius: 100%;
+  position: absolute;
+  left: 4px;
+  top: 3px;
+  display: block;
+  transition: 0.5s left;
+}
+.switch .knob {
+  float: left;
+  width: 62px;
+  height: 28px;
+  margin: 0 10px;
+  border-radius: 14px;
+  background: #fff;
+  position: relative;
+}
+.switch .knob:after {
+  content: "";
+  background: #222;
+  width: 22px;
+  height: 22px;
+  border-radius: 100%;
+  position: absolute;
+  left: 4px;
+  top: 3px;
+  display: block;
+  transition: 0.5s left;
+}
+.switch.on label:first-of-type {
+  color: #222;
+}
+.switch.on label:last-of-type {
+  color: #fff;
+}
+.switch.on .knob:after {
+  left: 36px;
+  transition: 0.5s left;
+}
