ui 수정 : css 토글 색상 변경

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -158,7 +158,7 @@ font-family: 'Noto Sans KR';
   display: block;
   font-size: 14px;
   line-height: 28px;
-  color: #979696;
+  color: #fff;
   cursor: pointer;
   transition: 0.5s color;
 }
