ui 수정 : ::selection 배경색과 텍스트 색상 변경

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,16 @@
   height: 100%;
 }
 
+::-moz-selection { /* Code for Firefox */
+  color: #667eea;
+  background: #222;
+}
+
+::selection {
+  color: #667eea;
+  background: #222;
+}
+
 input::placeholder {
   font-family: 'Noto Sans KR';
   color: black;
